--- a/BankApi.Service.V2/appsettings.json
+++ b/BankApi.Service.V2/appsettings.json
@@ -26,7 +26,7 @@
     "PageSize": {
       "Default": 21,
       "Minimum": 1,
-      "Maximum": 1200
+      "Maximum": 2147483647
     },
     "FixedWindowRateLimit": {
       "AutoReplenishment": true,
