--- a/.spectral/ruleset.bank.yml
+++ b/.spectral/ruleset.bank.yml
@@ -5,6 +5,20 @@ aliases:
 documentationUrl: https://www.guanchen.nl/
 
 rules:
+  bank-tag-requires-industry-value:
+    description: Tags must be from the bank industry.
+    message: This is not an bank industry value chain business capabilities keywords.
+      Please make sure there is at least one qualified tag name.
+    given:
+      - $.tags.*.name
+    severity: warn
+    then:
+      function: enumeration
+      functionOptions:
+        values:
+          - Supervisory
+          - Administrative
+
   bank-path-requires-kebab-case:
     description: Paths must be in kebab-case.
     message: Path is not in kebab-case.
@@ -51,7 +65,8 @@ rules:
 
   bank-summary-well-formed:
     description: Operations must have a well-formed summary.
-    message: Operation summary is not well-formed. Must start with a capital letter, containing only letters, numbers, and spaces, and no dots, and the total length should be at most 25 characters.
+    message: Operation summary is not well-formed. Must start with a capital letter,
+      containing only letters, numbers, and spaces, and no dots, and the total length should be at most 25 characters.
     severity: warn
     given: "$..summary"
     then:
@@ -61,7 +76,9 @@ rules:
 
   bank-description-well-formed:
     description: Security schemes, parameters and operations must have a well-formed description.
-    message: Security scheme, parameter or operation is not well-formed. Each sentence must start with a capital letter, end with a period, and the total length should be at least 15 characters. Markdown tables and URLs are allowed.
+    message: Security scheme, parameter or operation is not well-formed.
+      Each sentence must start with a capital letter, end with a period,
+      and the total length should be at least 15 characters. Markdown tables and URLs are allowed.
     severity: warn
     given:
       - $.paths.*.*.description
