--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,7 +9,8 @@
 		"ms-dotnettools.csdevkit",
 		"ms-graph.kiota",
 		"stoplight.spectral",
-		"streetsidesoftware.code-spell-checker"
+		"streetsidesoftware.code-spell-checker",
+		"github.copilot"
 	],
 	// List of extensions recommended by VS Code that should not be recommended for users of this workspace.
 	"unwantedRecommendations": []
