spectral.validateFiles setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "dotnet.testWindow.useTestingPlatformProtocol": true,
     "spectral.rulesetFile": ".spectral/main.yml",
+    "spectral.validateFiles": [
+        "**/Specs.Generated/*.json"
+    ],
     "cSpell.words": [
         "Apim",
         "appexamples",
