--- a/BankApi.Service.V2/appsettings.json
+++ b/BankApi.Service.V2/appsettings.json
@@ -26,7 +26,12 @@
     "PageSize": {
       "Default": 21,
       "Minimum": 1,
-      "Maximum": 2147483647
+      "Maximum": 70707070
+    },
+    "GenericBoundaries": {
+      "Minimum": 0,
+      "Maximum": 70707070,
+      "Regex": ".*"
     },
     "FixedWindowRateLimit": {
       "AutoReplenishment": true,
