api settings for test project

--- a/BankApi.Tests/BankApi.Tests.csproj
+++ b/BankApi.Tests/BankApi.Tests.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="TUnit" Version="*" />
   </ItemGroup>
 
