--- a/BankApi.Service.Stable/appsettings.Development.json
+++ b/BankApi.Service.Stable/appsettings.Development.json
@@ -6,5 +6,5 @@
     }
   },
   "OTEL_EXPORTER_OTLP_ENDPOINT": "http://localhost:4317",
-  "OTEL_SERVICE_NAME": "Bank API - V2"
+  "OTEL_SERVICE_NAME": "Bank API - Stable"
 }
