--- a/BankApi.Service.Stable/BankApi.Service.Stable.csproj
+++ b/BankApi.Service.Stable/BankApi.Service.Stable.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <!-- for OpenApi spec generation -->
-    <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="9.*">
+    <PackageReference Include="Microsoft.Extensions.ApiDescription.Server" Version="10.*-*">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
