--- a/BankApi.Core/BankApi.Core.csproj
+++ b/BankApi.Core/BankApi.Core.csproj
@@ -14,13 +14,14 @@
     <PackageReference Include="Gridify.EntityFramework" Version="2.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.*-*" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="10.*-*" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.*-*" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.*-*" GeneratePathProperty="true" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.*-*" />
     <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.*-*" />
     <PackageReference Include="Microsoft.Extensions.Compliance.Redaction" Version="9.*" />
     <PackageReference Include="Microsoft.Extensions.Http.Resilience" Version="9.*" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.*" />
     <PackageReference Include="Microsoft.Kiota.Bundle" Version="1.*" />
+    <PackageReference Include="Microsoft.OpenApi" Version="2.*-*" />
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.*" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.11.*" />
     <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.*-*" />
@@ -28,5 +29,14 @@
     <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.11.*" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.*" />
   </ItemGroup>
+
+  <!--
+    HACK Workaround for https://github.com/dotnet/aspnetcore/issues/61019
+  -->
+  <Target Name="DisableCompileTimeOpenApiXmlGenerator" BeforeTargets="CoreCompile">
+    <ItemGroup>
+      <Analyzer Remove="$(PkgMicrosoft_AspNetCore_OpenApi)\analyzers\dotnet\cs\Microsoft.AspNetCore.OpenApi.SourceGenerators.dll" />
+    </ItemGroup>
+  </Target>
 
 </Project>
