--- a/BankApi.Core/BankApi.Core.csproj
+++ b/BankApi.Core/BankApi.Core.csproj
@@ -9,12 +9,12 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Azure.Storage.Blobs" Version="9.*" />
-    <PackageReference Include="AspNetCore.Authentication.ApiKey" Version="8.*" />
+    <PackageReference Include="AspNetCore.Authentication.ApiKey" Version="9.*" />
     <PackageReference Include="Gridify" Version="2.*" />
     <PackageReference Include="Gridify.EntityFramework" Version="2.*" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.*-*" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="10.*-*" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.*-*" GeneratePathProperty="true" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.*-*" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="10.*-*" />
     <PackageReference Include="Microsoft.Extensions.Caching.Hybrid" Version="9.*" />
     <PackageReference Include="Microsoft.Extensions.Compliance.Redaction" Version="9.*" />
@@ -22,11 +22,11 @@
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.*" />
     <PackageReference Include="Microsoft.Kiota.Bundle" Version="1.*" />
     <PackageReference Include="Microsoft.OpenApi" Version="2.0.0-preview.18" />
-    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.11.*" />
-    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.11.*" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.*-*" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.11.*" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.11.*" />
+    <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.12.*" />
+    <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.12.*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.12.*-*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.12.*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.12.*" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.*" />
   </ItemGroup>
 
