--- a/.spectral/ruleset.bank.yml
+++ b/.spectral/ruleset.bank.yml
@@ -25,8 +25,8 @@ rules:
           - Administrative
 
   bank:header-requires-hyphenated-pascal-case:
-    description: HTTP headers must be in Hyphenated-Pascal-Case, exceptions are API-Version and WWW-Authenticate.
-    message: HTTP header is not in Hyphenated-Pascal-Case, exceptions are API-Version and WWW-Authenticate.
+    description: HTTP headers must be in Hyphenated-Pascal-Case, exceptions are API-Version, WWW-Authenticate and X-JWS-Signature.
+    message: HTTP header is not in Hyphenated-Pascal-Case, exceptions are API-Version, WWW-Authenticate and X-JWS-Signature.
     severity: warn
     given:
       - "$..responses..headers"
@@ -36,7 +36,7 @@ rules:
       field: "@key"
       function: pattern
       functionOptions:
-        match: "^(API-Version|WWW-Authenticate|([A-Z][a-z0-9]*)(-[A-Z][a-z0-9]*)*)$"
+        match: "^(API-Version|WWW-Authenticate|X-JWS-Signature|([A-Z][a-z0-9]*)(-[A-Z][a-z0-9]*)*)$"
 
   bank:property-requires-camel-case:
     description: Property names, acronyms, path parameters and query parameters must be in camelCase.
