--- a/BankApi.Core/BankApi.Core.csproj
+++ b/BankApi.Core/BankApi.Core.csproj
@@ -24,9 +24,9 @@
     <PackageReference Include="Microsoft.OpenApi" Version="2.*" /> <!-- Requires to stay on v2, please read https://github.com/microsoft/OpenAPI.NET/blob/main/CONTRIBUTING.md#branches-and-support-policy -->
     <PackageReference Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.*" />
     <PackageReference Include="OpenTelemetry.Extensions.Hosting" Version="1.14.*" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.13.*-*" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.*-*" />
-    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.14.*-*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.EntityFrameworkCore" Version="1.14.*-*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.AspNetCore" Version="1.14.*" />
+    <PackageReference Include="OpenTelemetry.Instrumentation.Http" Version="1.14.*" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.*" />
     <PackageReference Include="jose-jwt" Version="5.*" />
   </ItemGroup>
