--- a/BankApi.Tests/BankApi.Tests.csproj
+++ b/BankApi.Tests/BankApi.Tests.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="TUnit" Version="*" />
+    <PackageReference Include="TUnit" Version="1.*" />
   </ItemGroup>
 
   <ItemGroup>
