rename spectral folder so it's not hidden for CodeQL

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "dotnet.testWindow.useTestingPlatformProtocol": true,
-    "spectral.rulesetFile": ".spectral/main.yml",
+    "spectral.rulesetFile": "Specs.Ruleset/main.yml",
     "spectral.validateFiles": [
         "**/Specs.Generated/*.json"
     ],
