--- a/BankApi.Service.Stable/appsettings.json
+++ b/BankApi.Service.Stable/appsettings.json
@@ -60,7 +60,7 @@
       },
       "TermsOfService": "https://en.wikipedia.org/wiki/Terms_of_service#Content",
       "Contact": {
-        "Url": "https://www.guanchen.nl"
+        "Url": "https://guanchen.nl"
       },
       "Description": "The Bank API is a design reference project suitable to bootstrap development for a compliant and modern API."
     }
